--- a/package.json
+++ b/package.json
@@ -24,16 +24,12 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4",
-    "datatables.net": "^1.10.13",
-    "echarts": "^3.4.0",
-    "jquery": "^3.1.1",
-    "jquery-ui-dist": "^1.12.1",
-    "jsplumb": "^2.3.2",
+    "bootstrap": "^3.3.7",
+    "font-awesome": "^4.7.0",
     "md5": "^2.2.1",
     "ng2-bootstrap": "1.6.3",
     "ng2-toastr": "^4.0.1",
     "ng2-translate": "5.0.0",
-    "portfinder": "1.0.13",
     "tinymce": "4.5.6",
     "ts-helpers": "1.1.2"
   },
